Fix reset button overlapping the Apply button

--- a/wwm_rubik_style.scss
+++ b/wwm_rubik_style.scss
@@ -4638,3 +4638,9 @@ input.form-submit {
     }
   }
 }
+
+#views-exposed-form-admin-views-node-system-1 {
+  .form-submit {
+    position: absolute;
+  }
+}
